[package]
name = "tutorial-yew-ddp"
version = "0.1.0"
authors = ["Leon <yanglyu.leon.7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.76"
yew = "0.18.0"
rand = { version = "0.8.0" }
getrandom = { version = "0.2", features = ["js"] }